--- a/python_fundamental/02_Condition.ipynb
+++ b/python_fundamental/02_Condition.ipynb
@@ -101,10 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i : 0 / j : a\n",
+      "i : 1 / j : b\n",
+      "i : 2 / j : c\n",
+      "i : 3 / j : d\n",
+      "i : 4 / j : e\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in enumerate([\"a\",\"b\",\"c\",\"d\",\"e\"]):\n",
+    "    print(\"i :\", i, end=\" / \") # index\n",
+    "    print(\"j :\", j) # value"
+   ]
   }
  ],
  "metadata": {
