--- a/python_fundamental/04_Numpy.ipynb
+++ b/python_fundamental/04_Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,6 +932,141 @@
     "print(np.unique(np.where(data>0)[0]))\n",
     "print(names[np.unique(np.where(data>0)[0])]) # 실제 이름을 가져오고자 할 때"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 모양변경: shape을 바꾸기 -> reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23],\n",
+       "       [24, 25, 26, 27],\n",
+       "       [28, 29, 30, 31]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numpy Transform\n",
+    "arr = np.arange(32).reshape((8,4)) # 8행 4열\n",
+    "arr \n",
+    "# 32개를 변형할 정확한 모양 크기를 넣어야 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 32 into shape (3,9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-4699fb01c306>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 크기가 안맞을 때 에러 발생\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0marr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 32 into shape (3,9)"
+     ]
+    }
+   ],
+   "source": [
+    "# 크기가 안맞을 때 에러 발생\n",
+    "arr = arr.reshape((3,9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7]\n",
+      " [ 8  9 10 11 12 13 14 15]\n",
+      " [16 17 18 19 20 21 22 23]\n",
+      " [24 25 26 27 28 29 30 31]]\n",
+      "\n",
+      "[[ 0  8 16 24]\n",
+      " [ 1  9 17 25]\n",
+      " [ 2 10 18 26]\n",
+      " [ 3 11 19 27]\n",
+      " [ 4 12 20 28]\n",
+      " [ 5 13 21 29]\n",
+      " [ 6 14 22 30]\n",
+      " [ 7 15 23 31]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# T: Transpose (가로, 세로 축을 뒤바꿔줌)\n",
+    "arr = arr.reshape((4,8))\n",
+    "print(arr)\n",
+    "print()\n",
+    "print(arr.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기본적인 수학 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[0.         1.         1.41421356 1.73205081 2.         2.23606798\n",
+      " 2.44948974 2.64575131 2.82842712 3.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ufunc / math\n",
+    "arr1 = np.arange(10)\n",
+    "print(arr1)\n",
+    "print(np.sqrt(arr1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
