--- a/python_fundamental/05_1_Pandas.ipynb
+++ b/python_fundamental/05_1_Pandas.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "10000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "10000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -171,30 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['2016-03-01', '2016-06-01', '2016-09-01', '2016-12-01', '2017-03-01'], dtype='object')\n"
+      "<class 'pandas.core.indexes.base.Index'>\n",
+      "<class 'numpy.ndarray'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 10000,  10300,   9900,  10500, 110000], dtype=int64)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(stock_price_Series_withIndex.index)\n",
-    "stock_price_Series_withIndex.values # array"
+    "print(type(stock_price_Series_withIndex.index))\n",
+    "print(type(stock_price_Series_withIndex.values)) # array"
    ]
   },
   {
@@ -697,7 +688,7 @@
    ],
    "source": [
     "# Series 관련 기타 - 크기\n",
-    "print(stock_price_Series_withIndex.shape)b\n",
+    "print(stock_price_Series_withIndex.shape)\n",
     "print(stock_price_Series_withIndex.size)\n",
     "print(stock_price_Series_withIndex.ndim)"
    ]
