--- a/python_fundamental/05_2_Pandas_DataFrame.ipynb
+++ b/python_fundamental/05_2_Pandas_DataFrame.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +31,45 @@
       "4    4\n",
       "dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [column1]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -44,12 +83,17 @@
     "print()\n",
     "ds = pd.Series(d)\n",
     "print(ds)\n",
-    "# 차이가 있다.\n"
+    "# 차이가 있다.\n",
+    "df = df.drop(0, axis =0)\n",
+    "df = df.drop(1, axis =0)\n",
+    "df = df.drop(2, axis =0)\n",
+    "df = df.drop(3, axis =0)\n",
+    "df = df.drop(4, axis =0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +203,7 @@
        "4        4       4        5      500"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +301,7 @@
        "4        4       4        5      500"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +450,7 @@
        "4       4        5      500"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +579,7 @@
        "4           4        5      500"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +653,7 @@
        "2017-03-01  11000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +746,7 @@
        "2017-03-01  11000  12000  17000  7000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +779,7 @@
        "10000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +908,7 @@
        "저가        3000        5000        5000        8000        7000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +933,7 @@
        "       [11000, 12000, 17000,  7000]], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +955,7 @@
        "(5, 4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +1004,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +1028,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1055,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1082,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1135,6 +1179,239 @@
    "metadata": {},
    "source": [
     "### 그렇다면 interpolate할 때 각 양끝단이 정해진것이 아니라 처음부터 NaN이면 어떻게 할 것인가?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               시가     종가     고가    저가\n",
+      "2016-03-01  10000  11000  13000  3000\n",
+      "2016-06-01  10300  12000  15000  5000\n",
+      "2016-09-01   9900  10000  15000  5000\n",
+      "2016-12-01  10500  13000  18000  8000\n",
+      "2017-03-01  11000  12000  17000  7000\n",
+      "\n",
+      "               고가     시가    저가     종가\n",
+      "2016-03-01  13000  10000  3000  11000\n",
+      "2016-06-01  15000  10300  5000  12000\n",
+      "2016-09-01  15000   9900  5000  10000\n",
+      "2016-12-01  18000  10500  8000  13000\n",
+      "2017-03-01  17000  11000  7000  12000\n",
+      "\n",
+      "               종가    저가     시가     고가\n",
+      "2016-03-01  11000  3000  10000  13000\n",
+      "2016-06-01  12000  5000  10300  15000\n",
+      "2016-09-01  10000  5000   9900  15000\n",
+      "2016-12-01  13000  8000  10500  18000\n",
+      "2017-03-01  12000  7000  11000  17000\n",
+      "\n",
+      "               시가     종가     고가    저가\n",
+      "2017-03-01  11000  12000  17000  7000\n",
+      "2016-12-01  10500  13000  18000  8000\n",
+      "2016-09-01   9900  10000  15000  5000\n",
+      "2016-06-01  10300  12000  15000  5000\n",
+      "2016-03-01  10000  11000  13000  3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stock_price_DF_withIndex)\n",
+    "print()\n",
+    "# axis = 1 (칼럼 이름 기준으로)\n",
+    "print(stock_price_DF_withIndex.sort_index(axis = 1)) # 오름차순이 default\n",
+    "print()\n",
+    "print(stock_price_DF_withIndex.sort_index(axis = 1, ascending = False)) # 내림차순\n",
+    "print()\n",
+    "# axis = 0 (행 이름 기준으로)\n",
+    "print(stock_price_DF_withIndex.sort_index(axis = 0, ascending = False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>종가</th>\n",
+       "      <th>저가</th>\n",
+       "      <th>시가</th>\n",
+       "      <th>고가</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2017-03-01</td>\n",
+       "      <td>12000</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>11000</td>\n",
+       "      <td>17000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2016-12-01</td>\n",
+       "      <td>13000</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>10500</td>\n",
+       "      <td>18000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2016-09-01</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>9900</td>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2016-06-01</td>\n",
+       "      <td>12000</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>10300</td>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2016-03-01</td>\n",
+       "      <td>11000</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>13000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               종가    저가     시가     고가\n",
+       "2017-03-01  12000  7000  11000  17000\n",
+       "2016-12-01  13000  8000  10500  18000\n",
+       "2016-09-01  10000  5000   9900  15000\n",
+       "2016-06-01  12000  5000  10300  15000\n",
+       "2016-03-01  11000  3000  10000  13000"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 행이름, 열이름 둘다 sort하고자 할 때\n",
+    "stock_price_DF_withIndex.sort_index(axis=1,ascending=False).sort_index(axis = 0, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 정렬 할 때에 가로 세로 이름이 아니라 value(값)을 중심으로 정렬하고 싶을 때??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               시가     종가     고가    저가\n",
+      "2016-03-01  10000  11000  13000  3000\n",
+      "2016-06-01  10300  12000  15000  5000\n",
+      "2016-09-01   9900  10000  15000  5000\n",
+      "2017-03-01  11000  12000  17000  7000\n",
+      "2016-12-01  10500  13000  18000  8000\n",
+      "\n",
+      "               시가     종가     고가    저가\n",
+      "2016-12-01  10500  13000  18000  8000\n",
+      "2017-03-01  11000  12000  17000  7000\n",
+      "2016-06-01  10300  12000  15000  5000\n",
+      "2016-09-01   9900  10000  15000  5000\n",
+      "2016-03-01  10000  11000  13000  3000\n",
+      "\n",
+      "               시가     종가     고가    저가\n",
+      "2016-12-01  10500  13000  18000  8000\n",
+      "2017-03-01  11000  12000  17000  7000\n",
+      "2016-06-01  10300  12000  15000  5000\n",
+      "2016-09-01   9900  10000  15000  5000\n",
+      "2016-03-01  10000  11000  13000  3000\n",
+      "\n",
+      "               시가     종가     고가    저가\n",
+      "2016-12-01  10500  13000  18000  8000\n",
+      "2017-03-01  11000  12000  17000  7000\n",
+      "2016-06-01  10300  12000  15000  5000\n",
+      "2016-09-01   9900  10000  15000  5000\n",
+      "2016-03-01  10000  11000  13000  3000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정렬 순위 : sort_value (by = 칼럼명을 기준으로 해야 한다.)\n",
+    "print(stock_price_DF_withIndex.sort_values(by = \"고가\"))\n",
+    "print()\n",
+    "print(stock_price_DF_withIndex.sort_values(by = \"고가\", ascending = False))\n",
+    "print()\n",
+    "# 여러 칼럼에 적용?\n",
+    "# 저가를 기준으로 먼저 정렬하고 고가에서 같은 value에 대해서 종가를 기준으로 sorting한다.\n",
+    "print(stock_price_DF_withIndex.sort_values(by=[\"저가\",\"종가\"], ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 인덱스가 유일한지 확인해보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_price_DF_withIndex.index.is_unique"
    ]
   }
  ],
