--- a/python_fundamental/05_2_Pandas_DataFrame.ipynb
+++ b/python_fundamental/05_2_Pandas_DataFrame.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DataFrame\n",
+    "# 05. 2) Pandas - DataFrame\n",
     "### 자료만 입력 & 컬럼 이름 추가"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,10 @@
     "df = df.drop(1, axis =0)\n",
     "df = df.drop(2, axis =0)\n",
     "df = df.drop(3, axis =0)\n",
-    "df = df.drop(4, axis =0)\n"
+    "df = df.drop(4, axis =0)\n",
+    "\n",
+    "df[\"column1\"] = 0\n",
+    "df"
    ]
   },
   {
@@ -467,9 +470,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### drop 메서드 활용\n",
+    "#### 만약 drop 메서드로 안에 데이터를 모두 지우면 빈 df에 다시 채울 수가 없다. (행이 사라져버려서)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -494,7 +507,8 @@
     "# axis : 0(row, 가로줄), 1(column, 세로줄)\n",
     "print(df.drop(\"newCol\", axis = 1))\n",
     "print(df.drop(3, axis = 0))\n",
-    "# del function은 사용 즉시 df 원본에 적용 but drop method는 그 때만 한시적으로 적용"
+    "# del function은 사용 즉시 df 원본에 적용 but drop method는 그 때만 한시적으로 적용\n",
+    "\n"
    ]
   },
   {
