--- a/python_fundamental/05_3_Pandas_Apply_Lambda.ipynb
+++ b/python_fundamental/05_3_Pandas_Apply_Lambda.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 05. 3) Pandas - "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -546,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data cleaning"
+    "## Data cleaning"
    ]
   },
   {
