--- a/python_fundamental/05_2_Pandas_DataFrame.ipynb
+++ b/python_fundamental/05_2_Pandas_DataFrame.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -29,47 +29,9 @@
       "2    2\n",
       "3    3\n",
       "4    4\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "0\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>column1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [column1]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -83,15 +45,7 @@
     "print()\n",
     "ds = pd.Series(d)\n",
     "print(ds)\n",
-    "# 차이가 있다.\n",
-    "df = df.drop(0, axis =0)\n",
-    "df = df.drop(1, axis =0)\n",
-    "df = df.drop(2, axis =0)\n",
-    "df = df.drop(3, axis =0)\n",
-    "df = df.drop(4, axis =0)\n",
-    "\n",
-    "df[\"column1\"] = 0\n",
-    "df"
+    "# 차이가 있다."
    ]
   },
   {
@@ -474,7 +428,7 @@
    "metadata": {},
    "source": [
     "### drop 메서드 활용\n",
-    "#### 만약 drop 메서드로 안에 데이터를 모두 지우면 빈 df에 다시 채울 수가 없다. (행이 사라져버려서)"
+    "#### 만약 drop 메서드로 안에 데이터를 모두 지우면 빈 df에서 다시 list로 채워야 한다. (단일 값으로 넣을 수 없다.)"
    ]
   },
   {
