--- a/python_fundamental/00_MyStudyCoding.ipynb
+++ b/python_fundamental/00_MyStudyCoding.ipynb
@@ -122,11 +122,217 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## drop() 메서드\n",
+    "[pandas doc 참고하기](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.drop.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# row 기준은 default로 지정되어 있음 (axis = 0)\n",
+    "df_test = df_test.drop([0, 1])\n",
+    "# column 기준은 axis =1 \n",
+    "df_test = df_test.drop(['B', 'C'], axis=1)\n",
+    "\n",
+    "df_test = df_test.drop(columns = \"칼럼명\")\n",
+    "df_test = df_test.drop(index='인덱스명')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## at / iat, loc / iloc\n",
+    "[pandas loc, at 참고하기](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.loc.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max_speed</th>\n",
+       "      <th>shield</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>cobra</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>viper</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>sidewinder</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            max_speed  shield\n",
+       "cobra               1       2\n",
+       "viper               4       5\n",
+       "sidewinder          7       8"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([[1, 2], [4, 5], [7, 8]],\n",
+    "                  index=['cobra', 'viper', 'sidewinder'],\n",
+    "                  columns=['max_speed', 'shield'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_speed    4\n",
+      "shield       5\n",
+      "Name: viper, dtype: int64\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loc[\"행이름\"]\n",
+    "print(df.loc['viper'])\n",
+    "# loc[\"행이름\", \"컬럼이름\"]\n",
+    "print(df.loc['viper','shield'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max_speed</th>\n",
+       "      <th>shield</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>viper</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>sidewinder</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            max_speed  shield\n",
+       "viper               4       5\n",
+       "sidewinder          7       8"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# loc[[\"a\",\"b\"]], 여러 행 가져오기\n",
+    "df.loc[['viper', 'sidewinder']]\n",
+    "\n",
+    "# dataframe에 직접 indexing 하는 것은 에러\n",
+    "# df[['viper', 'sidewinder']] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_speed    1\n",
+      "shield       2\n",
+      "Name: cobra, dtype: int64\n",
+      "       max_speed  shield\n",
+      "cobra          1       2\n",
+      "viper          4       5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# loc와 기본 용법은 같지만 iloc은 숫자로 부여한다는 차이점이 존재\n",
+    "print(df.iloc[0])\n",
+    "print(df.iloc[[0,1]])"
+   ]
   }
  ],
  "metadata": {
