--- a/python_fundamental/05_4_Pandas_IO.ipynb
+++ b/python_fundamental/05_4_Pandas_IO.ipynb
@@ -2657,7 +2657,9 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
