--- a/python_fundamental/06_1_Data_Handling.ipynb
+++ b/python_fundamental/06_1_Data_Handling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 06. Data Handling"
+    "# 06. 1) Data Handling"
    ]
   },
   {
