--- a/python_fundamental/05_2_Pandas_DataFrame.ipynb
+++ b/python_fundamental/05_2_Pandas_DataFrame.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,8 +29,7 @@
       "2    2\n",
       "3    3\n",
       "4    4\n",
-      "dtype: int64\n",
-      "0\n"
+      "dtype: int64\n"
      ]
     }
    ],
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +159,7 @@
        "4        4       4        5      500"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,13 +257,14 @@
        "4        4       4        5      500"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 특정위치 데이터 바꾸기\n",
+    "# iat 으로 하는 것도 나쁘진 않다.\n",
     "print(df.iloc[1,2])\n",
     "df.iloc[1,2] = 2000\n",
     "df"
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -314,6 +314,8 @@
     "print(df)\n",
     "print()\n",
     "del df[\"column1\"]\n",
+    "\n",
+    "# 원본 df에 바로 영향을 준다. drop 메서드와 다른점\n",
     "print(df)"
    ]
   },
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +409,7 @@
        "4       4        5      500"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,12 +430,13 @@
    "metadata": {},
    "source": [
     "### drop 메서드 활용\n",
-    "#### 만약 drop 메서드로 안에 데이터를 모두 지우면 빈 df에서 다시 list로 채워야 한다. (단일 값으로 넣을 수 없다.)"
+    "#### 만약 drop 메서드로 안에 데이터를 모두 지우면 빈 df에서 다시 list로 채워야 한다. (단일 값으로 넣을 수 없다.)\n",
+    "혹은 append로 채워야 한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -459,10 +462,10 @@
    "source": [
     "# 컬럼 제거 방법 3 : drop 메소드 사용\n",
     "# axis : 0(row, 가로줄), 1(column, 세로줄)\n",
+    "# axis = 1 (column기준) 해놓고 해당 칼럼이 존재하지 않으면 에러 발생\n",
     "print(df.drop(\"newCol\", axis = 1))\n",
     "print(df.drop(3, axis = 0))\n",
-    "# del function은 사용 즉시 df 원본에 적용 but drop method는 그 때만 한시적으로 적용\n",
-    "\n"
+    "# del function은 사용 즉시 df 원본에 적용 but drop method는 그 때만 한시적으로 적용"
    ]
   },
   {
@@ -560,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +624,7 @@
        "2017-03-01  11000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +958,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DF: reindex"
+    "## DF: reindex\n",
+    "### newDF = originDF.reindex(['a','b','c']) 이런식으로 제어"
    ]
   },
   {
@@ -1035,6 +1039,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### fill_value=0 : NaN값을 지정값으로 대체"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1064,7 +1075,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 실질적으로 \"보간법\"으로 처리하는 경우도 많다."
+    "## 실질적으로 \"보간법\"으로 처리하는 경우도 많다.\n",
+    "### interpolate()"
    ]
   },
   {
@@ -1112,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1377,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
